<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Attendance</string>

    <!-- SLIDER INTRO -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="slide1_title">DIGITAL ATTENDANCE</string>
    <string name="slide1_desc">The presence of a digital attendance system is an invention that can replace manual attendance data recording</string>
    <string name="slide2_title">ATTENDANCE SYSTEM</string>
    <string name="slide2_desc">Good employee management in the digital era also produces the best employees, one of which is employee attendance</string>
    <string name="slide3_title">ALWAYS WEAR A MASK</string>
    <string name="slide3_desc">In order to prevent the spread of the Covid-19 virus, the Government has issued a Physical Distancing policy as well as a policy of working, studying and worshiping from home.</string>

    <!-- LANDING PAGE-->
    <string name="btn_login_title">Login</string>
    <string name="btn_signup_title">Sign Up</string>
    <string name="landing_title">WELCOME</string>
    <string name="landing_desc">Please use the button below to login or sign up</string>

    <!-- LOGIN PAGE -->
    <string name="login_title">Welcome to Login</string>
    <string name="login_desc">Please fill Username and password to login your app account</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="login_now">Login Now</string>
    <string name="dont_have_account">Dont Have Account? please </string>
    <string name="lbl_register">Register</string>

    <!-- SIGN UP PAGE -->
    <string name="signup_title">Create your account</string>
    <string name="signup_desc">Please fill Fullname, No. KTP, Ship and Password to register your app</string>
    <string name="signup_username">Username</string>
    <string name="signup_fullname">Full Name</string>
    <string name="signup_password">Password</string>
    <string name="repet_password">Repeat Password</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already Have Account? please</string>
    <string name="lbl_login">Login</string>

    <!-- FORGOT PASSWORD -->
    <string name="forgot_title">Forgot password</string>
    <string name="forgot_desc">Please No KTP, Password and Repeat Password to reset your account</string>
    <string name="forgot_ktp">No. KTP</string>
    <string name="reset_password">Reset Password</string>

    <!-- BOTTOM NAVIGATION MENU -->
    <string name="lbl_home">Home</string>
    <string name="lbl_history">History</string>
    <string name="lbl_profile">Profile</string>

    <!-- HOME -->
    <string name="home_title">Your Attendance</string>
    <string name="lbl_check_in">CHECK IN</string>
    <string name="lbl_check_out">CHECK OUT</string>
    <string name="lbl_location">Location</string>
    <string name="dummy_title_1">PT. Phintraco Technology</string>
    <string name="dummy_address_1">Jl. Lingkar Mega Kuningan Blok E3, The East Tower 12th Floor</string>
    <string name="dummy_title_2">PT. BCA Tbk</string>
    <string name="dummy_address_2">Jl. MH Thamrin No. 1, Menara BCA, Grand Indonesia</string>
    <string name="dummy_title_3">Rumah</string>
    <string name="dummy_address_3">Jakarta Selatan</string>

    <!-- HISTORY -->
    <string name="history_title">Attendance History</string>
    <string name="lbl_logs">Logs</string>
    <string name="lbl_day">Day</string>
    <string name="lbl_week">Week</string>
    <string name="lbl_month">Month</string>
    <string name="lbl_year">Year</string>
    <string-array name="history_tab_label">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>
    <string name="history_row_check_in">Check In - PT Phintech - 08:00</string>
    <string name="history_row_check_out">Check Out - PT Phintech - 17:00</string>

    <!-- PROFILE -->
    <string name="profile_name">Linus Torvalds</string>
    <string name="profile_level">Software Engineer</string>
    <string name="lbl_nik_employee">No Karyawan</string>
    <string name="nik_employee">NIK-0909090909</string>
    <string name="lbl_address">Alamat</string>
    <string name="address_employee">Kebon Jeruk, Jakarta Barat</string>
    <string name="lbl_change_pass">Change Password</string>
    <string name="change_pass">*************</string>

</resources>