<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frame_forgot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".fragment.ForgotFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:src="@drawable/ic_arrow_back" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/oval" />

        <TextView
            android:id="@+id/tv_forgot_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivBack"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="@dimen/login_margin_left"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/forgot_title" />

        <TextView
            android:id="@+id/tv_forgot_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_forgot_title"
            android:layout_marginLeft="@dimen/login_margin_left"
            android:layout_marginRight="50dp"
            android:textColor="@color/white"
            android:layout_marginTop="12dp"
            android:text="@string/forgot_desc"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="170dp"
            android:background="@drawable/bg_bottom_landing"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_lbl_ktp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_ktp"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="@dimen/login_margin_left"
                android:textSize="@dimen/font_size_login_sign_up" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_ktp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_layout_height"
                android:layout_marginLeft="@dimen/login_margin_left"
                android:layout_marginRight="@dimen/login_margin_right"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_ktp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_lbl_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_password"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="@dimen/login_margin_left"
                android:textSize="@dimen/font_size_login_sign_up" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_layout_height"
                android:layout_marginLeft="@dimen/login_margin_left"
                android:layout_marginRight="@dimen/login_margin_right"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_repassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repet_password"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="@dimen/login_margin_left"
                android:textSize="@dimen/font_size_login_sign_up" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_repassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_layout_height"
                android:layout_marginLeft="@dimen/login_margin_left"
                android:layout_marginRight="@dimen/login_margin_right"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_repassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <Button
            android:id="@+id/btn_forgot_password"
            android:layout_width="0dp"
            android:layout_height="@dimen/login_btn_height"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/login_margin_left"
            android:layout_marginEnd="@dimen/login_margin_right"
            android:textAllCaps="false"
            android:layout_above="@+id/tv_already_have_account"
            android:layout_marginBottom="15dp"
            android:textColor="@color/black"
            android:text="@string/forgot_password"
            app:backgroundTint="@color/yellow"/>

        <TextView
            android:id="@+id/tv_already_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:layout_marginStart="80dp"
            android:textSize="12sp"
            android:text="@string/already_have_account" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_toEndOf="@+id/tv_already_have_account"
            android:text="@string/lbl_login"
            android:textColor="@color/blue"
            android:textSize="12sp"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:textStyle="bold" />

    </RelativeLayout>
</FrameLayout>