<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frame_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".fragment.SignupFragment">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:src="@drawable/ic_arrow_back" />
    
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/oval" />
    
        <TextView
            android:id="@+id/tv_signup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivBack"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="@dimen/login_margin_left"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/signup_title" />
    
        <TextView
            android:id="@+id/tv_signup_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_signup_title"
            android:layout_marginLeft="@dimen/login_margin_left"
            android:layout_marginRight="50dp"
            android:textColor="@color/white"
            android:layout_marginTop="12dp"
            android:text="@string/signup_desc"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="150dp"
            android:background="@drawable/bg_bottom_landing"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">
    
            <TextView
                android:id="@+id/tv_lbl_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_username"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="@dimen/login_margin_left"
                android:textSize="@dimen/font_size_login_sign_up" />
    
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_layout_height"
                android:layout_marginLeft="@dimen/login_margin_left"
                android:layout_marginRight="@dimen/login_margin_right"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
    
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
    
            <TextView
                android:id="@+id/tv_lbl_fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_fullname"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="@dimen/login_margin_left"
                android:textSize="@dimen/font_size_login_sign_up" />
    
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_fullname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_layout_height"
                android:layout_marginLeft="@dimen/login_margin_left"
                android:layout_marginRight="@dimen/login_margin_right"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
    
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
    
            <TextView
                android:id="@+id/tv_lbl_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_password"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="@dimen/login_margin_left"
                android:textSize="@dimen/font_size_login_sign_up" />
    
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_layout_height"
                android:layout_marginLeft="@dimen/login_margin_left"
                android:layout_marginRight="@dimen/login_margin_right"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
    
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
    
            <TextView
                android:id="@+id/tv_lbl_repassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repet_password"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="@dimen/login_margin_left"
                android:textSize="@dimen/font_size_login_sign_up" />
    
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_repassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_layout_height"
                android:layout_marginLeft="@dimen/login_margin_left"
                android:layout_marginRight="@dimen/login_margin_right"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
    
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_repassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    
        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="0dp"
            android:layout_height="@dimen/login_btn_height"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/login_margin_left"
            android:layout_marginEnd="@dimen/login_margin_right"
            android:textAllCaps="false"
            android:layout_above="@+id/tv_already_have_account"
            android:layout_marginBottom="15dp"
            android:textColor="@color/black"
            android:text="@string/register"
            app:backgroundTint="@color/yellow"/>
    
        <TextView
            android:id="@+id/tv_already_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:layout_marginStart="80dp"
            android:textSize="12sp"
            android:text="@string/already_have_account" />
    
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/tv_already_have_account"
            android:layout_marginLeft="5dp"
            android:text="@string/lbl_login"
            android:textColor="@color/blue"
            android:textSize="12sp"
            android:textStyle="bold" />

    </RelativeLayout>
</FrameLayout>