<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/landing_bg"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_landing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/lL_login_signup"
        android:layout_marginBottom="150dp"
        android:src="@drawable/logo"/>

    <LinearLayout
        android:id="@+id/lL_login_signup"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_bottom_landing"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_landing_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:textColor="@color/landing_title"
            android:fontFamily="@font/avenir_black"
            android:text="@string/landing_title" />
        <TextView
            android:id="@+id/tv_landing_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/grey"
            android:text="@string/landing_desc"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="53dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/btn_blue"
                android:text="@string/btn_login_title"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline1"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="0dp"
                android:layout_height="53dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/btn_line"
                android:text="@string/btn_signup_title"
                android:textColor="@color/grey"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

    <FrameLayout
        android:id="@+id/fL_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>